gl51-master/src/test/deca/context/invalid/includedCircular_1.decah
// Description :
//    fichier inclut
//
// Résultat :
// 
//
//
// Historique :
//    créé le 01/01/2024

#include "includedCircular.decah"
